# test-rules-appengine-1

./: WORKSPACE
src/main/: BUILD.bazel
src/main/java/com/test/pcka/services/: BUILD.bazel  ServiceA.java
src/main/java/com/test/pckb/services/: BUILD.bazel  ServiceB.java
src/main/webapp/: appengine-web.xml
